# mojo-cnn

./: CMakeLists.txt
build-linux/: CMakeCache.txt  Makefile  TestMnist  TestMnistAVX512  TrainMnist  TrainMnistAVX512  cmake_install.cmake
examples/: makefile  test.cpp  train_mnist.cpp
mojo/: activation.h  core_math.h  cost.h  layer.h  mojo.h  network.h  solver.h  util.h
